fix masquerade bar covers rubric footers
this commit fixes both the rubric builder and rubric assessment tray
footers being hidden by the masquerade bar.

fixes EVAL-4148
flag=enhanced_rubrics

setup:
- have a course with a teacher that you can masquerade as
- have an assignment with a rubric attached

test plan:
- go to the rubric builder page acting as that teacher
- verify that the footer is visible
- go to speedgrader for the assignment you have with a rubric acting
  as that teacher
- open the rubric assessment tray and verify that you can see the
  footer to submit the assessment

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/349829
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Cameron Ray <cameron.ray@instructure.com>
Product-Review: Ravi Koll <ravi.koll@instructure.com>

--- a/app/stylesheets/bundles/enhanced_rubrics.scss
+++ b/app/stylesheets/bundles/enhanced_rubrics.scss
@@ -41,7 +41,7 @@
 
 body.is-masquerading-or-student-view {
   // show the student footer above the masquerading banner
-  #assignments-student-footer {
+  #enhanced-rubric-builder-footer {
     bottom: $student-view-banner-height;
     // don't obstruct the "border" of the student view
     #{direction(right)}: 3px;
